k3s/namespace/vpn/vpn-stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: pringles-master
      containers:

        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads

      volumes:
        - name: tun
          hostPath:
            path: /dev/net/tun
        - name: config
          hostPath:
            path: /opt/qbittorrent/config
        - name: downloads
          hostPath:
            path: /mnt/data/downloads

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: vpn
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
