k3s/namespace/vpn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: vpn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.media.williampring.ca`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: media-wildcard-tls
